@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,8 +14,7 @@ package org.openhab.binding.yamahareceiver.internal;
 
 import java.io.IOException;
 import java.io.InputStream;
-
-import org.apache.commons.io.IOUtils;
+import java.nio.charset.StandardCharsets;
 
 /**
  * Helper for loading XML files from classpath.
@@ -29,7 +28,7 @@ public class ResponseLoader {
             if (in == null) {
                 return null;
             }
-            return IOUtils.toString(in);
+            return new String(in.readAllBytes(), StandardCharsets.UTF_8);
         }
     }
 
