@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,17 +15,16 @@ package org.openhab.binding.feed.test;
 import static java.lang.Thread.sleep;
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.openhab.core.thing.ThingStatus.*;
 
 import java.io.IOException;
 import java.math.BigDecimal;
+import java.nio.charset.StandardCharsets;
 
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-import org.apache.commons.io.IOUtils;
 import org.eclipse.jetty.http.HttpStatus;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -46,6 +45,7 @@ import org.openhab.core.thing.ManagedThingProvider;
 import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingProvider;
 import org.openhab.core.thing.ThingRegistry;
+import org.openhab.core.thing.ThingStatus;
 import org.openhab.core.thing.ThingStatusDetail;
 import org.openhab.core.thing.ThingUID;
 import org.openhab.core.thing.binding.builder.ChannelBuilder;
@@ -93,7 +93,7 @@ public class FeedHandlerTest extends JavaOSGiTest {
     /**
      * It is updated from mocked {@link StateChangeListener#stateUpdated() }
      */
-    private StringType currentItemState = null;
+    private StringType currentItemState;
 
     // Required services for the test
     private ManagedThingProvider managedThingProvider;
@@ -104,6 +104,7 @@ public class FeedHandlerTest extends JavaOSGiTest {
     private Thing feedThing;
     private FeedHandler feedHandler;
     private ChannelUID channelUID;
+    private HttpService httpService;
 
     /**
      * This class is used as a mock for HTTP web server, serving XML feed content.
@@ -138,7 +139,8 @@ public class FeedHandlerTest extends JavaOSGiTest {
 
         public void setFeedContent(String feedContentFile) throws IOException {
             String path = "input/" + feedContentFile;
-            feedContent = IOUtils.toString(this.getClass().getClassLoader().getResourceAsStream(path));
+            feedContent = new String(getClass().getClassLoader().getResourceAsStream(path).readAllBytes(),
+                    StandardCharsets.UTF_8);
         }
     }
 
@@ -167,16 +169,17 @@ public class FeedHandlerTest extends JavaOSGiTest {
 
         unregisterFeedTestServlet();
 
-        // Wait for FeedHandler to be unregistered
-        waitForAssert(() -> {
-            feedHandler = (FeedHandler) feedThing.getHandler();
-            assertThat(feedHandler, is(nullValue()));
-        });
+        if (feedThing != null) {
+            // Wait for FeedHandler to be unregistered
+            waitForAssert(() -> {
+                feedHandler = (FeedHandler) feedThing.getHandler();
+                assertThat(feedHandler, is(nullValue()));
+            });
+        }
     }
 
-    private void registerFeedTestServlet() {
-        HttpService httpService = getService(HttpService.class);
-        assertThat(httpService, is(notNullValue()));
+    private synchronized void registerFeedTestServlet() {
+        waitForAssert(() -> assertThat(httpService = getService(HttpService.class), is(notNullValue())));
         servlet = new FeedServiceMock(DEFAULT_MOCK_CONTENT);
         try {
             httpService.registerServlet(MOCK_SERVLET_PATH, servlet, null, null);
@@ -185,10 +188,12 @@ public class FeedHandlerTest extends JavaOSGiTest {
         }
     }
 
-    private void unregisterFeedTestServlet() {
-        HttpService httpService = getService(HttpService.class);
-        assertThat(httpService, is(notNullValue()));
-        httpService.unregister(MOCK_SERVLET_PATH);
+    private synchronized void unregisterFeedTestServlet() {
+        waitForAssert(() -> assertThat(httpService = getService(HttpService.class), is(notNullValue())));
+        try {
+            httpService.unregister(MOCK_SERVLET_PATH);
+        } catch (IllegalArgumentException ignore) {
+        }
         servlet = null;
     }
 
@@ -231,7 +236,7 @@ public class FeedHandlerTest extends JavaOSGiTest {
 
         // This will ensure that the configuration is read before the channelLinked() method in FeedHandler is called !
         waitForAssert(() -> {
-            assertThat(feedThing.getStatus(), anyOf(is(ONLINE), is(OFFLINE)));
+            assertThat(feedThing.getStatus(), anyOf(is(ThingStatus.ONLINE), is(ThingStatus.OFFLINE)));
         }, 60000, DFL_SLEEP_TIME);
         initializeItem(channelUID);
     }
@@ -269,7 +274,7 @@ public class FeedHandlerTest extends JavaOSGiTest {
         initializeDefaultFeedHandler();
 
         waitForAssert(() -> {
-            assertThat("Feed Thing can not be initialized", feedThing.getStatus(), is(equalTo(ONLINE)));
+            assertThat("Feed Thing can not be initialized", feedThing.getStatus(), is(equalTo(ThingStatus.ONLINE)));
             assertThat("Item's state is not updated on initialize", currentItemState, is(notNullValue()));
         });
 
@@ -293,7 +298,7 @@ public class FeedHandlerTest extends JavaOSGiTest {
 
         waitForAssert(() -> {
             assertThat("Error occurred while trying to connect to server. Content is not downloaded!",
-                    feedThing.getStatus(), is(equalTo(ONLINE)));
+                    feedThing.getStatus(), is(equalTo(ThingStatus.ONLINE)));
         });
 
         waitForAssert(() -> {
@@ -360,7 +365,7 @@ public class FeedHandlerTest extends JavaOSGiTest {
         feedHandler.handleCommand(channelUID, RefreshType.REFRESH);
 
         waitForAssert(() -> {
-            assertThat(feedThing.getStatus(), is(equalTo(OFFLINE)));
+            assertThat(feedThing.getStatus(), is(equalTo(ThingStatus.OFFLINE)));
         });
 
         servlet.httpStatus = HttpStatus.OK_200;
@@ -371,7 +376,7 @@ public class FeedHandlerTest extends JavaOSGiTest {
         feedHandler.handleCommand(channelUID, RefreshType.REFRESH);
 
         waitForAssert(() -> {
-            assertThat(feedThing.getStatus(), is(equalTo(ONLINE)));
+            assertThat(feedThing.getStatus(), is(equalTo(ThingStatus.ONLINE)));
         });
     }
 
@@ -383,7 +388,7 @@ public class FeedHandlerTest extends JavaOSGiTest {
 
         initializeFeedHandler(invalidURL);
         waitForAssert(() -> {
-            assertThat(feedThing.getStatus(), is(equalTo(OFFLINE)));
+            assertThat(feedThing.getStatus(), is(equalTo(ThingStatus.OFFLINE)));
             assertThat(feedThing.getStatusInfo().getStatusDetail(), is(equalTo(ThingStatusDetail.CONFIGURATION_ERROR)));
         });
     }
@@ -396,7 +401,7 @@ public class FeedHandlerTest extends JavaOSGiTest {
 
         initializeFeedHandler(invalidURL);
         waitForAssert(() -> {
-            assertThat(feedThing.getStatus(), is(equalTo(OFFLINE)));
+            assertThat(feedThing.getStatus(), is(equalTo(ThingStatus.OFFLINE)));
             assertThat(feedThing.getStatusInfo().getStatusDetail(), is(equalTo(ThingStatusDetail.COMMUNICATION_ERROR)));
         }, 30000, DFL_SLEEP_TIME);
     }
@@ -409,7 +414,7 @@ public class FeedHandlerTest extends JavaOSGiTest {
 
         initializeFeedHandler(invalidURL);
         waitForAssert(() -> {
-            assertThat(feedThing.getStatus(), is(equalTo(OFFLINE)));
+            assertThat(feedThing.getStatus(), is(equalTo(ThingStatus.OFFLINE)));
             assertThat(feedThing.getStatusInfo().getStatusDetail(), is(equalTo(ThingStatusDetail.COMMUNICATION_ERROR)));
         });
     }
